# software-path-tracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  architecture-redesign-gameplan.md  design_notes.md  imgui.ini  notes.md  render-library-architecture.md  resources.md  sphere.md  style.md
libs/render/: CMakeLists.txt
libs/render/include/render/: Camera.h  Color.h  Log.h  PathTracer.h  Render.h  RenderEngine.h  Scene.h  Types.h
libs/render/src/: Log.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  RenderEngine.cpp  RenderEngineFactory.h  RenderSettings.cpp  Scene.cpp  render_assert.h  scene.md
libs/render/src/engines/: Render.cpp
libs/render/src/engines/pathtracer/: PathTracer.cpp  PathTracingEngine.h
libs/render/src/engines/pathtracer/backends/cpu/: CPUPathTracer.cpp  CPUPathTracer.h
libs/render/src/engines/pathtracer/backends/cpu/algorithms/: BRDF.h  Sampling.h
libs/render/src/engines/pathtracer/backends/cpu/osl/: SimpleRendererServices.cpp  SimpleRendererServices.h
libs/render/src/utils/: Math.h
src/: App.cpp  App.h  main.cpp
src/core/: Camera.cpp  Camera.h  Ray.h
src/geometry/: sphere_data.cpp  sphere_data.h
src/materials/: material.h
src/renderer/: CPURenderTarget.cpp  CPURenderTarget.h  GraphicsContext.cpp  GraphicsContext.h  HitInfo.h  PreviewRenderTarget.cpp  PreviewRenderTarget.h  Ray.h  RenderTarget.h  RenderTargetFactory.h  Texture2D.cpp  Texture2D.h  renderer.cpp  renderer.h
src/renderer/embree/: EmbreeRenderTarget.cpp  EmbreeRenderTarget.h
src/renderer/simd/: SimdRenderTarget.cpp  SimdRenderTarget.h
src/scene/: Scene.cpp  Scene.h
visualization/: .gitignore
